force-app/main/default/objects/MappingSchedulerEmailTemplate__mdt/MappingSchedulerEmailTemplate__mdt.object-meta.xml
<CustomObject>
    <label>Mapping Scheduler Email Template</label>
    <pluralLabel>Mappings Scheduler Email Template</pluralLabel>
</CustomObject>