force-app/main/default/objects/MappingSchedulerEmailTemplate__mdt/fields/EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplate__c</fullName>
    <label>Email Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>