force-app/main/default/objects/MappingSchedulerEmailTemplate__mdt/fields/EngagementType__c.field-meta.xml
<CustomField>
    <fullName>EngagementType__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
                <default>true</default>
                <label>Presencial</label>
            </value>
            <value>
                <fullName>À Distância</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>