force-app/main/default/objects/MappingSchedulerEmailTemplate__mdt/fields/relatedTo__c.field-meta.xml
<CustomField>
    <fullName>relatedTo__c</fullName>
    <label>relatedTo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person Account</fullName>
                <default>true</default>
                <label>Person Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>