force-app/main/default/objects/MappingSchedulerEmailTemplate__mdt/fields/SMSTemplate__c.field-meta.xml
<CustomField>
    <fullName>SMSTemplate__c</fullName>
    <label>SMS Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>