force-app/main/default/objects/MappingSchedulerEmailTemplate__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>relatedTo__c</columns>
    <columns>Status__c</columns>
    <columns>Work_Type__c</columns>
    <columns>EngagementType__c</columns>
    <columns>EmailTemplate__c</columns>
    <columns>SMSTemplate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
    <language>en_US</language>
</ListView>